# HDF4CPP

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile_all.in  Doxyfile_user.in  README.md  format.sh
cmake/: FindHDF4.cmake
examples/: CMakeLists.txt  ReadingSData.cpp  ReadingVData.cpp
include/hdf4cpp/: HdfAttribute.h  HdfAttribute_priv.h  HdfDefines.h  HdfDestroyer.h  HdfException.h  HdfFile.h  HdfItem.h  HdfObject.h  hdf.h
lib/: HdfAttribute.cpp  HdfException.cpp  HdfFile.cpp  HdfItem.cpp
tests/: CMakeLists.txt  HdfFileTest.cpp
tests/test_data/: small_test.hdf
